Fixed Styling of Task Entry ; Fixed z-index of Task\Button Container and RPB\Overlay

--- a/src/components/styles/RadiallyPositionedButton.module.scss
+++ b/src/components/styles/RadiallyPositionedButton.module.scss
@@ -52,7 +52,7 @@
     height:100vh;
     width:100vw;
     background: rgba(black,.35);
-    z-index:2;
+    z-index:3;
     position:fixed;
     top:0;
     left:0;
