--- a/src/components/styles/Task.module.scss
+++ b/src/components/styles/Task.module.scss
@@ -140,17 +140,17 @@
 
 .TaskNameWrapper{
     height:100%;
-    width: calc(100% - 58px - 20px); // 100% - Sibling width - padding
+    width: calc(100% - 58px - 20px) !important; // 100% - Sibling width - padding
     display:flex;
     align-items: flex-start;
 
     .Linked &{
-        width: calc(100% - 88px - 20px);//calc(100% - 88px - 10px); // 100% - Sibling width - padding
+        width: calc(100% - 88px - 20px) !important;//calc(100% - 88px - 10px); // 100% - Sibling width - padding
 
     }
 
     .Note &{
-        width: calc(100% - 18px - 10px); // 100% - Sibling width - padding
+        width: calc(100% - 18px - 10px) !important; // 100% - Sibling width - padding
 
     }
 
@@ -262,7 +262,6 @@
         border-bottom: 1px solid rgba(white,1);
         box-sizing:content-box;
         margin-bottom:-3.5px;
-        width:90%;
         transition: border-bottom .25s linear;
         &:placeholder-shown{
             border-bottom: 1px solid $lightGray;
@@ -272,25 +271,38 @@
         }
     }
     .TaskTime{
-        padding:1px 7.5px;
         background: none;
         border:1px solid $lightGray;
+        text-align: center;
+        font-size:8px;
+        width:45px;
         border-radius:5rem;
-        margin-right:-12.5px;
+        margin-right:-7.5px;
         cursor:pointer;
     }
 }
 
 .EntryButton{
     @extend %TaskButton;
+    background: none;
+    border: 1px solid $lightGray;
+
+    transition: border .25s ease-out, background .25s ease-out;
     
-    background: linear-gradient(to bottom, $orange, $lightGray, transparent);
-    background-position: left 50%;
-    background-size: 100% 800%;
-    
-    .Gestures{
-        .Drag-up{
-            background-position: left 0%;
+    transition-delay:.3s;
+    svg{
+        opacity:0;
+        transition: opacity .25s ease-out;
+        transition-delay:0s;
+    }
+    &:hover{
+        border: 1px solid $green;
+        background: $green;
+        
+        transition-delay:0s;
+        svg{
+            opacity:1;
+            transition-delay:.3s;
         }
     }
 
