--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,6 @@ $yellowOrange: #FFB117;
 $darkGray: #282727;
 $gray: #454444;
 $pink: #FF5151;
-$green: yellowgreen;
+$green: rgb(137, 189, 34);
 $red:#FF0073;
 $lightGray: rgba(white,.55);
